--- a/other_dataset/satellite/Sat_Application.Rmd
+++ b/other_dataset/satellite/Sat_Application.Rmd
@@ -497,7 +497,6 @@ loss_all <- as.data.frame(cbind(loss_inla, loss_dnn, loss_dk, loss_ck))
 
 write.csv(as.data.frame(loss_all),here::here("other_dataset/satellite/sat_loss.csv"),row.names = FALSE)
 loss_all <- read.csv(here::here("other_dataset/satellite/sat_loss.csv"))
-loss_inla_ck <- loss_all[,c(1,4)]
 
 ggplot() +
   geom_boxplot(data = reshape2::melt(loss_inla_ck), aes(x = variable, y = value)) +
@@ -518,19 +517,14 @@ ggplot() +
 ```{r}
 library(sp)
 library(ggplot2)
-load(here::here("other_dataset/satellite/SatelliteTemps.RData"))
-sat_raw <- na.omit(sat.temps)
-colnames(sat_raw) <- c("long","lat","y")
 
-
-sat_dat <- aggregate(y ~ long + lat, data = all.sat.temps, FUN = mean)
-
-
+load(here::here("other_dataset/satellite/AllSatelliteTemps.RData"))
+sat_dat <- na.omit(all.sat.temps[,c(1,2,4)])
+colnames(sat_dat) <- c("long","lat", "y")
 long <- sat_dat$long
 lat <- sat_dat$lat
 y <- sat_dat$y
 
-library(verification)
 calculate_dist_between <- function(x){
   return( mean(spDists(matrix(x, ncol = 1)))  )
 }
@@ -553,27 +547,15 @@ crps <- function(prediction_matrix, true_value){
 }
 
 
-pred_dnn <- as.matrix(read.csv("D:/77/Reasearch/temp/dnn_pred_sat.csv"))
-pred_dk <- as.matrix(read.csv("D:/77/Reasearch/temp/dk_pred_sat.csv"))
-pred_ck <- as.matrix(read.csv("D:/77/Reasearch/temp/ck_pred_sat.csv"))
-pred_inla <- as.matrix(read.csv("D:/77/Reasearch/temp/inla_pred_sat.csv"))
-#source(here::here("other_dataset/satellite/scoringRules_wrappers.R"))
-library(scoringutils)
+pred_dnn <- as.matrix(read.csv("D:/77/Reasearch/temp/sat_pred/dnn_pred_sat.csv"))
+pred_dk <- as.matrix(read.csv("D:/77/Reasearch/temp/sat_pred/dk_pred_sat.csv"))
+pred_ck <- as.matrix(read.csv("D:/77/Reasearch/temp/sat_pred/ck_pred_sat.csv"))
+pred_inla <- as.matrix(read.csv("D:/77/Reasearch/temp/sat_pred/inla_pred_sat.csv"))
+
 crps_dnn_all <- crps(pred_dnn,y)
 crps_dk_all <- crps(pred_dk,y)
 crps_ck_all <- crps(pred_ck,y)
 crps_inla_all <- crps(pred_inla,y)
-
-ggplot() +
-  geom_boxplot(data = reshape2::melt(as.data.frame(cbind(crps_dnn_all,crps_dk_all,crps_ck_all,crps_inla_all))), aes(x = variable, y = value)) +
-   coord_flip()
-ggplot() +
-  geom_density(aes(x = crps_dnn_all, color = "DNN")) +
-  geom_density(aes(x = crps_dk_all, color = "DK")) +
-  geom_density(aes(x = crps_ck_all, color = "CK")) +
-  geom_density(aes(x = crps_inla_all, color = "INLA")) 
-  
-  
 
 
 
@@ -581,6 +563,14 @@ print(paste("CRPS of DNN is: ", mean(crps_dnn_all)))
 print(paste("CRPS of DK is: ", mean(crps_dk_all)))
 print(paste("CRPS of CK is: ", mean(crps_ck_all)))
 print(paste("CRPS of INLA is: ", mean(crps_inla_all)))
+
+
+write.csv(crps_dnn_all,"D:/77/Reasearch/temp/sat_pred/crps_dnn_sat.csv",row.names = FALSE)
+write.csv(crps_dk_all,"D:/77/Reasearch/temp/sat_pred/crps_dk_sat.csv",row.names = FALSE)
+write.csv(crps_ck_all,"D:/77/Reasearch/temp/sat_pred/crps_ck_sat.csv",row.names = FALSE)
+write.csv(crps_inla_all,"D:/77/Reasearch/temp/sat_pred/crps_inla_sat.csv",row.names = FALSE)
+
+
 ```
 
 # Interval Score Calculation
@@ -617,93 +607,22 @@ int_score_dk <- all_interval_score(prediction_sample = pred_dk, true_x = y)
 int_score_ck <- all_interval_score(prediction_sample = pred_ck, true_x = y)
 int_score_inla <- all_interval_score(prediction_sample = pred_inla, true_x = y)
 
-ggplot() +
-  geom_boxplot(data = reshape2::melt(as.data.frame(cbind(int_score_dnn,int_score_dk,int_score_ck,int_score_inla))), aes(x = variable, y = value)) +
-   coord_flip()
-
-ggplot() +
-  geom_density(aes(x = int_score_dnn, color = "DNN")) +
-  geom_density(aes(x = int_score_dk, color = "DK")) +
-  geom_density(aes(x = int_score_ck, color = "CK")) +
-  geom_density(aes(x = int_score_inla, color = "INLA")) 
-
-
 
 print(paste("Interval Score of DNN is: ", mean(int_score_dnn)))
 print(paste("Interval Score of DK is: ", mean(int_score_dk)))
 print(paste("Interval Score of CK is: ", mean(int_score_ck )))
 print(paste("Interval Score of INLA is: ", mean(int_score_inla )))
 
-```
 
 
-
-```{r}
-
-
-min_max_scale <- function(x)
-{
-  low <- range(x)[1]
-  high <- range(x)[2]
-  
-  out <- (x - low)/(high - low)
-  return(out)
-  
-}
-
-
-grid_long <- seq(from = min(long), to = max(long), length.out = grid_res)
-grid_lat <- seq(from = min(lat), to = max(lat), length.out = grid_res)
-
-
-
-grid_pred_dnn <- read.csv("D:/77/Reasearch/temp/grid_pred_dnn.csv")
-grid_pred_dk <- read.csv("D:/77/Reasearch/temp/grid_pred_dk.csv")
-grid_pred_ck <- read.csv("D:/77/Reasearch/temp/grid_pred_ck.csv")
-grid_pred_inla <- read.csv("D:/77/Reasearch/temp/grid_pred_inla.csv")
-
-
-ggplot() +
-  geom_raster(aes(x = long, y = lat, fill = y ) ) +
-  scale_fill_viridis()
-
-ggplot() +
-  geom_raster(aes(x = grid_long, y = grid_lat, fill = apply(grid_pred_dnn, 1, mean) )) +
-  scale_fill_viridis()
-
-ggplot() +
-  geom_raster(aes(x = grid_long, y = grid_lat, fill = apply(grid_pred_dk, 1, mean) )) +
-  scale_fill_viridis()
-
-ggplot() +
-  geom_raster(aes(x = grid_long, y = grid_lat, fill = apply(grid_pred_ck, 1, mean) )) +
-  scale_fill_viridis()
-
-ggplot() +
-  geom_raster(aes(x = grid_long, y = grid_lat, fill = apply(grid_pred_inla, 1, mean) )) +
-  scale_fill_viridis(limits = c(20,55))
-
-#uncertainty
-
-ggplot() +
-  geom_raster(aes(x = grid_long, y = grid_lat, fill = apply(grid_pred_dnn, 1, sd) )) +
-  scale_fill_viridis()
-
-ggplot() +
-  geom_raster(aes(x = grid_long, y = grid_lat, fill = apply(grid_pred_dk, 1, sd) )) +
-  scale_fill_viridis()
-
-ggplot() +
-  geom_raster(aes(x = grid_long, y = grid_lat, fill = apply(grid_pred_ck, 1, sd) )) +
-  scale_fill_viridis()
-
-ggplot() +
-  geom_raster(aes(x = grid_long, y = grid_lat, fill = apply(grid_pred_inla, 1, sd) )) +
-  scale_fill_viridis(limits = c(0,2))
-
-
+write.csv(int_score_dnn,"D:/77/Reasearch/temp/sat_pred/int_dnn_sat.csv",row.names = FALSE)
+write.csv(int_score_dk,"D:/77/Reasearch/temp/sat_pred/int_dk_sat.csv",row.names = FALSE)
+write.csv(int_score_ck,"D:/77/Reasearch/temp/sat_pred/int_ck_sat.csv",row.names = FALSE)
+write.csv(int_score_inla,"D:/77/Reasearch/temp/sat_pred/int_inla_sat.csv",row.names = FALSE)
 
 ```
+
+
 
 
 
